# temu

./: .gitignore  CMakeLists.txt  README.md
include/: cache.h  cpu.h  decode.h  elf.h  machine.h  mem.h  memory.h  mmu.h  parameters.h  perf.h  plic-simple.h  ram.h  register_file.h  rom.h  tlb.h  trap.h  types.h  uart8250.h  vm.h  zicsr.h
include/port/: console.h  load_binary.h  lock.h  main_memory.h  os_yield_cpu.h  port_main.h  system_timer.h
lib/: elf_helper.cpp
patches/linux/: 0001-riscv-add-have-kernel-compression-algorithms-selects.patch  0002-configs-add-.config-which-produces-the-2.3MiB-kernel.patch  0003-configs-remove-kernel-compression-and-enable-MMU-and.patch  0004-riscv-llep-disable-detection-of-misaligned-mem-acces.patch  0005-serial-8250-add-skip-autoconfig-flag-and-cancel-loop.patch  0006-configs-add-built-in-initramfs-options.patch  0007-Revert-serial-8250-add-skip-autoconfig-flag-and-canc.patch  0008-serial-8250-skip-autoconfig-on-the-ns16550a-driver.patch
patches/opensbi/: 0001-platform-add-platform-Low-speed-Linux-Experimental-P.patch  0002-llep-add-defconfig.patch  0003-llep-remove-unused-aclint-and-plic-temporarily.patch  0004-llep-set-up-fw_jump-to-have-firmware-output.patch  0005-llep-opensbi-should-run-in-ram-which-starts-at-0x020.patch  0006-llep-fix-the-fw_jump_addr-setting.patch  0007-llep-specify-the-risc-v-isa-to-rv32ima_zicsr_zifence.patch  0008-llep-set-FW_JUMP_ADDR-to-0x0300_0000.patch  0009-llep-set-fw_jump-address-to-0x02004b00-due-to-the-ra.patch  0010-llep-pass-fdt-address-0x02048800.patch  0011-llep-set-text-start-to-0x80dc0000.patch  0012-llep-set-fw-text-start-to-0x80fa0000.patch
patches/u-boot/: 0001-board-add-new-board-low-speed-linux-experimental-pla.patch  0002-configs-add-support-for-llep.patch  0003-configs-enlarge-the-malloc-f-len-set-up-dtc-with-emb.patch  0004-dts-add-device-tree-support-for-llep-with-uart-enabl.patch  0005-dts-add-bootph-all-to-uart-node-to-avoid-skipping-th.patch  0006-dts-add-cpus-memory-and-timer-node-to-support-initca.patch  0007-configs-set-RISCV_SMODE_TIMER_FREQ-10kHz-to-support-.patch  0008-configs-lower-the-size-of-console-buffers-to-avoid-c.patch  0009-cli-allow-users-to-disable-history-if-unused-at-all.patch  0010-cli-allow-users-to-determine-history-buffer-allocati.patch  0011-llep-set-the-uboot-start-address-to-0x0204_b000.patch  0012-llep-use-seperate-fdt-which-locates-0x02048800.patch  0013-llep-configs-set-RAM-base-address-at-0x80000000-and-.patch  0014-dts-update-llep.dts-to-set-bootargs-and-memory-node.patch  0015-dts-update-llep-device-tree-nodes.patch  0016-llep-configs-set-the-init-sp-to-correct-place-and-en.patch  0017-dts-llep-support-thead-plic-and-uart-external-interr.patch  0018-llep-configs-set-sdram-size-to-32MiB.patch
peripherals/: plic-simple.c  serial_8250.cpp  serial_8250.h  uart8250.c
src/: cache.c  cpu.cpp  decode.c  decode.cpp  elf_helper.cpp  elf_helper.h  irom.cpp  irom.h  machine.c  machine.h  main.c  main.cpp  mem.c  mmu.c  tlb.c  tlb.h  trap.c  vm.c  zicsr.c
src/cpu-wip-0001/: iram.cpp  iram.h  machine.cpp  machine.h  peripherals.cpp  peripherals.h
src/peripherals/: uart8250.c
src/port/: console.c  load_binary.c  lock.c  main_memory.c  os_yield_cpu.c  port_main.c  system_timer.c
test/bare-metal/: CPU-WIP-0001.ld  Makefile  bare-metal.LD  determinant.c  determinant.dump  ieee754.c  ieee754.dump  start.S  test1.c  test1.dump  test2.c  test2.dump  test_1.S  test_1.c  test_1.elf  test_2.S  test_2.elf  test_3.S  test_3.c  test_3.dump  test_3.elf  test_4.S  test_4.c  test_4.dump  test_4.elf  test_5.S  test_5.c  test_5.dump  test_5.elf
test/isa/: Makefile  add.dump  addi.dump  amoadd_w.S  and.dump  andi.dump  auipc.dump  beq.dump  bge.dump  bgeu.dump  blt.dump  bltu.dump  bne.dump  csr.S  encoding.h  jal.dump  jalr.dump  lb.dump  lbu.dump  lh.dump  lhu.dump  link.LD  lui.dump  lw.dump  mi_scall.S  riscv_test.h  sb.dump  sh.dump  sll.dump  slli.dump  slt.dump  sltu.dump  sra.dump  srai.dump  srl.dump  srli.dump  sub.dump  sw.dump  test_macros.h  xor.dump
test/vm/: Makefile  p_riscv_test.h  riscv_test.h  string.c  vm.c
util/: DiffTestServer.py  csrIndexGen.py
